# excel-interview-agent

./: .gitignore  CONSTRUCTIVE_FEEDBACK_IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_OVERVIEW.md  README.md  app.py  env.example  example_usage.py  main.py  pyproject.toml  requirements.txt
backend/: .eslintrc.js  README.md  jest.config.js  nodemon.json  package-lock.json  package.json  tsconfig.json
backend/docs/: API-Docs.md  System-Design.md
backend/logs/: .bcee019cb46aff5b5991e27b591f7af67308a032-audit.json  .e5210eccd550f9edac74ec60024b73718af4e4e8-audit.json
backend/src/: index.ts
backend/src/config/: database.ts  env.ts
backend/src/controllers/: interview.controller.ts  session.controller.ts
backend/src/entities/: BaseEntity.ts  Interview.ts  InterviewQuestion.ts  InterviewSession.ts  SessionResponse.ts  index.ts
docs/: Agents Tech Spec.md  Core requirements.md
sessions/session_01ba0e43-f117-4319-afd7-0c07bbe55ac1/: state.json
sessions/session_5cb532f2-aa66-4ca5-9937-f1a77967e721/: state.json
sessions/session_736097a5-f6b9-4b11-a07e-2f53701a73c9/: report.json  state.json
sessions/session_acfa5d5f-3299-4679-97a4-163e20145471/: state.json
sessions/session_f4aa9cea-6213-4e32-99d0-be99e3b15da9/: report.json  state.json
src/: app.py  main.py  models.py  questions.py  workflow.py
src/agents/: evaluation_agent.py  feedback_agent.py  interview_flow_agent.py  state_manager_agent.py
src/interview_engine/: __init__.py  engine.py  evaluator.py  models.py  persistence.py  question_generator.py  reporter.py
src/ui/: gradio_app.py
(+17 files in other folders)
